--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,8 @@ setenv =
 deps=
     py36: coverage
 
-install_command = pip install -e ".[testing]" -U {opts} {packages}
 commands =
+    pip install coverage
     pip freeze
     coverage run runtests.py
     coverage report -m
