--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
+          key: v1-dependency-cache-{{ checksum "securegroups/__init__.py" }}-{{ checksum "Makefile" }}
       - run:
           name: install dependencies
           command: |
@@ -22,7 +22,7 @@ jobs:
       - store_artifacts:
           path: htmlcov/
       - save_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
+          key: v1-dependency-cache-{{ checksum "securegroups/__init__.py" }}-{{ checksum "Makefile" }}
           paths:
             - "venv"
             - ".tox"
@@ -32,7 +32,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
+          key: v1-dependency-cache-{{ checksum "securegroups/__init__.py" }}-{{ checksum "Makefile" }}
       - run:
           name: install python dependencies
           command: |
@@ -50,7 +50,7 @@ jobs:
           command: |
             make package
       - save_cache:
-          key: v1-dependency-cache-{{ checksum "setup.py" }}-{{ checksum "Makefile" }}
+          key: v1-dependency-cache-{{ checksum "securegroups/__init__.py" }}-{{ checksum "Makefile" }}
           paths:
             - "venv"
             - ".tox"
@@ -69,6 +69,6 @@ workflows:
             - BuildAndTest
           filters:
             tags:
-              only: /[0-9]+(\.[0-9]+)*/
+              only: /^v.*/
             branches:
               ignore: /.*/
