lets try this...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,6 @@ workflows:
             - BuildAndTest
           filters:
             tags:
-              only: /^v.*/
+              only: /.*/
             branches:
               ignore: /.*/
