--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,11 +65,11 @@ workflows:
   SecureGroups:
     jobs:
       - BuildAndTest
-      - Hold: # <<< A job that will require manual approval in the CircleCI web application.
-          type: approval # <<< This key-value pair will set your workflow to a status of "On Hold"
-          requires: # We only run the "hold" job when test2 has succeeded
-           - BuildAndTest
       - Deploy:
           requires:
             - BuildAndTest
-            - Hold
+          filters:
+            tags:
+              only: .*
+            branches:
+              ignore: /.*/
