one more test...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,12 +64,12 @@ workflows:
   version: 2
   SecureGroups:
     jobs:
-      - BuildAndTest
+      - BuildAndTest:
       - Deploy:
           requires:
             - BuildAndTest
           filters:
             tags:
-              only: .*
+              only: /.*/
             branches:
               ignore: /.*/
