--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
       - image: circleci/python:3.7
     steps:
       - checkout
+      - restore_cache:
+          key: v1-dependency-cache-{{ checksum "securegroups/__init__.py" }}-{{ checksum "Makefile" }}
       - run:
           name: install python dependencies
           command: |
@@ -38,15 +40,14 @@ jobs:
             . venv/bin/activate
             make dev
       - run:
-          name: init .pypirc
-          command: |
-            echo -e "[pypi]" >> ~/.pypirc
-            echo -e "username = __token__" >> ~/.pypirc
-            echo -e "password = ${pypi-api-token}" >> ~/.pypirc
-      - run:
           name: create packages
           command: |
             make package
+      - save_cache:
+          key: v1-dependency-cache-{{ checksum "securegroups/__init__.py" }}-{{ checksum "Makefile" }}
+          paths:
+            - "venv"
+            - ".tox"
       - run:
           name: upload to pypi
           command: |
@@ -59,6 +60,8 @@ workflows:
     jobs:
       - BuildAndTest
       - Deploy:
+          context:
+            - pypi
           filters:
             tags:
               only: /.*/
