fixes for ulr/no filters/version/tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,10 @@ setenv =
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
 deps=
-    py36: coverage
+    py37: coverage
+    py37: allianceauth>=2.8.0
 
 commands =
-    pip install coverage
     pip freeze
     coverage run runtests.py
     coverage report -m
