--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 [tox]
 skipsdist = False
 usedevelop = True
-envlist = py37
+envlist = py38
 
 [testenv]
 setenv =
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
 deps=
-    py37: coverage
-    py37: allianceauth>=2.8.0
+    coverage
+    allianceauth>=2.8.0
 
 commands =
     pip freeze
