dont force groups in testing ATM

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist = False
 usedevelop = True
-envlist = py38
+envlist = py3
 
 [testenv]
 setenv =
@@ -9,10 +9,10 @@ setenv =
 
 deps=
     coverage
-    allianceauth>=2.8.0
 
 commands =
-    pip freeze
+    pip install -e ../allianceauth/.
+    pip list
     coverage run runtests.py
     coverage report -m
     coverage html
