--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,17 @@
 [tox]
 skipsdist = False
 usedevelop = True
-envlist = py37
+envlist = py3
 
 [testenv]
 setenv =
     DJANGO_SETTINGS_MODULE = tests.test_settings
 
 deps=
-    py37: coverage
-    py37: allianceauth>=2.8.0
+    coverage
 
 commands =
-    pip freeze
+    pip list
     coverage run runtests.py
     coverage report -m
     coverage html
