--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 repos:
   -   repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v3.3.0
+      rev: v4.4.0
       hooks:
       -   id: trailing-whitespace
       -   id: end-of-file-fixer
           exclude: \.min\.css$
   -   repo: https://github.com/pre-commit/mirrors-autopep8
-      rev: 'master'
+      rev: 'v2.0.2'
       hooks:
       -   id: autopep8
