--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,23 @@
 [tox]
-skipsdist = False
-usedevelop = True
-envlist = py3
+isolated_build = true
+skipsdist = true
+usedevelop = true
+envlist = {py38, py39, py310, py311}-django40, {py38, py39, py310, py311, py312}-django42
 
 [testenv]
 setenv =
-    DJANGO_SETTINGS_MODULE = tests.test_settings
-
+    django40: DJANGO_SETTINGS_MODULE = tests.test_settingsAA3
+    django42: DJANGO_SETTINGS_MODULE = tests.test_settingsAA4
 deps=
+    django40: allianceauth<4
+    django42: allianceauth>=4.0.0
     coverage
 
-commands =
+install_command = pip install -e ".[test]" -U {opts} {packages}
+
+commands=
+    coverage run runtests.py securegroups -v 2 --debug-mode
     pip list
-    coverage run runtests.py
-    coverage report -m
-    coverage html
     coverage xml
+    coverage html
+    coverage report -m
