--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 build-backend = "flit_core.buildapi"
 requires = [
-    "flit-core<4,>=3.2",
+    "flit-core>=3.2,<4",
 ]
 
 [project]
@@ -32,6 +32,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
@@ -41,7 +42,7 @@ dynamic = [
     "version",
 ]
 dependencies = [
-    "allianceauth<5,>=3",
+    "allianceauth>=4,<5",
 ]
 urls.Homepage = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-secure-groups"
 urls.Source = "https://github.com/Solar-Helix-Independent-Transport/allianceauth-secure-groupss"
