Add pre-committed everything

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 isolated_build = true
 skipsdist = true
 usedevelop = true
-envlist = {py38, py39, py310, py311, py312}-django42
+envlist = py3-django42
 
 [testenv]
 setenv =
